# financial-doc-chatbot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: __init__.py  document_qa.py  server.py
frontend/: chat_ui.py
tests/: __init__.py  test_document_qa.py  test_server.py
